# android-ndk

./: .gitignore
ASNativeActivity/: build.gradle  settings.gradle
ASNativeActivity/app/: build.gradle
ASNativeActivity/app/src/main/: AndroidManifest.xml
ASNativeActivity/gradle/wrapper/: gradle-wrapper.properties
ASNativeActivity/nativeactivity/: build.gradle
ASNativeActivity/nativeactivity/src/main/cpp/: CMakeLists.txt  esUtil_Android.cpp
ASNativeActivity/phoenix/src/main/cpp/: CMakeLists.txt
ASNativeActivity/phoenixas/: build.gradle
ASNativeActivity/phoenixas/src/main/: AndroidManifest.xml
ASNativeActivity/phoenixas/src/main/cpp/: CMakeLists.txt
ASgles3Jni/: build.gradle  settings.gradle
ASgles3Jni/app/: build-18.gradle  build.gradle
ASgles3Jni/app/src/main/: AndroidManifest.xml
ASgles3Jni/app/src/main/cpp/: CMakeLists.txt  gles3jni.cpp  gleshook.c  mylog.h
ASgles3Jni/app/src/main/jni/: ThreadPool.cpp  gles3jni.h
ASgles3Jni/gles/: build.gradle
ASgles3Jni/gradle/wrapper/: gradle-wrapper.properties
ASgles3Jni/shader/: build.gradle  data.txt
ASgles3Jni/shader/src/main/: AndroidManifest.xml
ASgles3Jni/shader/src/main/jni/: gles3jni.cpp
ASglesbf/: import-summary.txt
cmake/endless-tunnel/: build.gradle
cmake/hello-libs/: build.gradle
cmake/hello-libs/src/main/cpp/: CMakeLists.txt
gles3jni/app/: build.gradle
gles3jni/app/src/main/: AndroidManifest.xml
hello-gl2/app/: build.gradle
hello-jni/app/src/main/cpp/: hello-jni.c
hello-jni/gradle/wrapper/: gradle-wrapper.properties
hello-libs/: local.properties
hello-libs/app/: build.gradle
hello-libs/app/src/main/cpp/: CMakeLists.txt
hello-libs/gperf/: build.gradle
hello-libs/gradle/wrapper/: gradle-wrapper.properties
jnihpp/: .gitignore  local.properties
jnihpp/app/: build.gradle
jnihpp/app/src/main/: AndroidManifest.xml
jnihpp/app/src/main/cpp/: CMakeLists.txt  hello.cpp  javahello.cpp  javahello.h
jnihpp/app/src/main/cpp/jni/: string.hpp
jnitest/app/: build.gradle
jnitest/app/src/main/: AndroidManifest.xml
jnitest/app/src/main/cpp/: AccessCache.c  AccessField.c  AccessMethod.c  AccessSuperMethod.c  CMakeLists.txt  IntArray.c  JNIException.c  ObjectArray.c  Sample.c  Sample1.c  Sample2.c  Sample3.c  Sample4.c  Sample5.c  Sample6.c  Sample7.c  arrtest.cc  attach.c  com_study_jnilearn_AccessCache.h  com_study_jnilearn_AccessField.h  com_study_jnilearn_AccessMethod.h  com_study_jnilearn_AccessSuperMethod.h  com_study_jnilearn_HelloWorld.c  com_study_jnilearn_IntArray.h  com_study_jnilearn_JNIException.h  com_study_jnilearn_ObjectArray.h  com_study_jnilearn_Sample.h  com_study_jnilearn_Sample1.h  com_study_jnilearn_Sample2.h  com_study_jnilearn_Sample3.h  hello-jni.c  invoke.c  (+7 more)
jnitest/gradle/wrapper/: gradle-wrapper.properties
native-audio/: settings.gradle
native-audio/audiodemo/: build.gradle
native-audio/audiodemo/src/main/cpp/: CMakeLists.txt
native-audio/audiotest/src/main/cpp/: CMakeLists.txt
native-audio/testsl/: build.gradle
native-audio/testsl/src/main/: AndroidManifest.xml
native-audio/testsl/src/main/cpp/: AudioRecordActivity.cpp  AudioRecordActivity.h  CMakeLists.txt  log.h
native-bitmaprender/app/src/main/: AndroidManifest.xml
native-echo/app/src/main/: AndroidManifest.xml
native-glesrender/app/src/main/: AndroidManifest.xml
native-glesrender/app/src/main/cpp/: CMakeLists.txt  OpenGLPlayerActivity.cpp
native-thread/app/src/main/: AndroidManifest.xml
native-wavplayer/app/src/main/: AndroidManifest.xml
native-wavplayer/app/src/main/cpp/: CMakeLists.txt  MainActivity.h  WAVPlayer.cpp
native-winrender/app/src/main/: AndroidManifest.xml
native-winrender/app/src/main/cpp/: AbstractPlayerActivity.cpp  CMakeLists.txt  NativeWindowPlayerActivity.cpp  NativeWindowPlayerActivity.h  OpenGLPlayerActivity.cpp  OpenGLPlayerActivity.h
other-builds/experimental/gles3jni/app/: build-11.gradle
other-builds/experimental/hello-libs/gperf/: build.gradle
photoprocessing/app/: build.gradle
photoprocessing/app/src/main/: AndroidManifest.xml
photoprocessing/app/src/main/cpp/: CMakeLists.txt  bicubic_resize.c  bitmap.c  bitmap.h  blur.c  colour_space.c  photo_processing.c
photoprocessing/gradle/wrapper/: gradle-wrapper.properties
samples-android/: build.gradle
samples-android/ButtonClicker/: build.gradle
samples-android/Common/gpg-sdk/: build.gradle
samples-android/gradle/wrapper/: gradle-wrapper.properties
san-angeles/app/: build.gradle
teapots/choreographer-30fps/: build.gradle
teapots/classic-teapot/: build.gradle
teapots/more-teapots/: build.gradle
testlib/: settings.gradle
testlib/demo/: build.gradle
testlib/demo/src/main/cpp/: CMakeLists.txt
testlib/gradle/wrapper/: gradle-wrapper.properties
testlib/svrApi/jni/: Android.mk
testlib/svrApi/private/: svrApiCore.cpp  svrApiCore.h  svrApiTimeWarp.cpp
webp/view/: CMakeLists.txt  build.gradle
(+187 files in other folders)
